[gd_scene load_steps=10 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Lobby/Players/Perso_.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Lobby/Players/Perso_Red_.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Lobby/Players/Perso_Dark_.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Lobby/Players/Perso_Pink_.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Lobby/bg.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="MainScreen" type="Panel" parent="."]
margin_left = 362.0
margin_top = 63.0
margin_right = 662.0
margin_bottom = 513.0
rect_clip_content = true
custom_styles/panel = SubResource( 1 )

[node name="Host" type="Button" parent="MainScreen"]
margin_left = 50.0
margin_top = 150.0
margin_right = 250.0
margin_bottom = 182.0
group = SubResource( 2 )
text = "New Game"

[node name="Join" type="Button" parent="MainScreen"]
margin_left = 50.0
margin_top = 200.0
margin_right = 250.0
margin_bottom = 232.0
text = "Join Game"

[node name="Settings" type="Button" parent="MainScreen"]
margin_left = 50.0
margin_top = 250.0
margin_right = 250.0
margin_bottom = 282.0
text = "Settings"

[node name="Quit" type="Button" parent="MainScreen"]
margin_left = 50.0
margin_top = 400.0
margin_right = 250.0
margin_bottom = 432.0
text = "Quit"

[node name="Settings" type="Panel" parent="."]
visible = false
margin_left = 362.0
margin_top = 63.0
margin_right = 662.0
margin_bottom = 513.0
rect_clip_content = true

[node name="Apply" type="Button" parent="Settings"]
margin_left = 50.0
margin_top = 400.0
margin_right = 250.0
margin_bottom = 432.0
text = "Apply"

[node name="PlayerNameLabel" type="Label" parent="Settings"]
margin_left = 20.0
margin_top = 60.0
margin_right = 120.0
margin_bottom = 84.0
text = "Player Name:"
align = 2

[node name="PlayerName" type="LineEdit" parent="Settings"]
margin_left = 132.0
margin_top = 56.0
margin_right = 282.0
margin_bottom = 80.0

[node name="RoomLobby" type="Panel" parent="."]
visible = false
margin_left = 112.0
margin_top = 63.0
margin_right = 912.0
margin_bottom = 513.0
rect_clip_content = true
custom_styles/panel = SubResource( 3 )

[node name="Player1" type="Label" parent="RoomLobby"]
margin_left = 100.0
margin_top = 320.0
margin_right = 200.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 1"
align = 1

[node name="Player2" type="Label" parent="RoomLobby"]
margin_left = 250.0
margin_top = 320.0
margin_right = 350.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 2"
align = 1

[node name="Player3" type="Label" parent="RoomLobby"]
margin_left = 400.0
margin_top = 320.0
margin_right = 500.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 3"
align = 1

[node name="Player4" type="Label" parent="RoomLobby"]
margin_left = 550.0
margin_top = 320.0
margin_right = 650.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 4
"
align = 1

[node name="Start" type="Button" parent="RoomLobby"]
margin_left = 650.0
margin_top = 400.0
margin_right = 750.0
margin_bottom = 420.0
text = "Start"

[node name="Leave" type="Button" parent="RoomLobby"]
margin_left = 760.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 40.0
text = "X"

[node name="Player1Sprite" type="Sprite" parent="RoomLobby"]
position = Vector2( 150, 200 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Player2Sprite" type="Sprite" parent="RoomLobby"]
position = Vector2( 300, 200 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Player3Sprite" type="Sprite" parent="RoomLobby"]
position = Vector2( 450, 200 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Player4Sprite" type="Sprite" parent="RoomLobby"]
position = Vector2( 600, 200 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="JoinPopup" type="Panel" parent="."]
visible = false
margin_left = 262.0
margin_top = 228.0
margin_right = 762.0
margin_bottom = 348.0

[node name="Room" type="LineEdit" parent="JoinPopup"]
margin_left = 100.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 34.0
text = "127.0.0.1"

[node name="Label" type="Label" parent="JoinPopup"]
margin_top = 10.0
margin_right = 100.0
margin_bottom = 34.0
text = "Address:"
align = 2
valign = 1

[node name="JoinRoom" type="Button" parent="JoinPopup"]
margin_left = 350.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 100.0
text = "Join"

[node name="Cancel" type="Button" parent="JoinPopup"]
margin_left = 50.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 100.0
text = "Cancel"

[node name="ErrorLabel" type="Label" parent="JoinPopup"]
margin_left = 200.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 92.0
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 6 )
normal_map = ExtResource( 6 )
centered = false
[connection signal="pressed" from="MainScreen/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="MainScreen/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="MainScreen/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainScreen/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="RoomLobby/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="RoomLobby/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="JoinPopup/JoinRoom" to="." method="_on_JoinRoom_pressed"]
[connection signal="pressed" from="JoinPopup/Cancel" to="." method="_on_JoinCancel_pressed"]
